samples/_failures_safe/1761533506_396bbb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_79012684.c: In function ‘main’:
./samples/SAFE/__tmp_79012684.c:175:5: error: expected expression at end of input
  175 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_79012684.c:175:5: error: expected declaration or statement at end of input
